# sayonara

./: .gitignore  CMakeLists.txt  MANUAL  Macros.h.in  README.txt  license.txt  sql
resources/: CMakeLists.txt
src/: CMakeLists.txt  Main.cpp  compiler.cmake
src/Application/: Application.cpp  Application.h  CMakeLists.txt  InstanceThread.cpp  InstanceThread.h  MetaTypeRegistry.cpp  MetaTypeRegistry.h  WindowsKeyHandler.cpp  WindowsKeyHandler.h  application.cpp  application.h
src/Components/: CMakeLists.txt
src/Components/Bookmarks/: Bookmark.cpp  Bookmark.h  Bookmarks.cpp  Bookmarks.h  CMakeLists.txt
src/Components/Broadcasting/: CMakeLists.txt  StreamDataSender.cpp  StreamDataSender.h  StreamHttpParser.cpp  StreamHttpParser.h  StreamServer.cpp  StreamServer.h  StreamServerHandler.cpp  StreamServerHandler.h  StreamWriter.cpp  StreamWriter.h
src/Components/CoverLookup/: CMakeLists.txt  CoverFetchThread.cpp  CoverFetchThread.h  CoverLocation.cpp  CoverLocation.h  CoverLookup.cpp  CoverLookup.h  CoverLookupAll.cpp  CoverLookupAll.h  CoverLookupAlternative.cpp  CoverLookupAlternative.h  LocalCoverSearcher.cpp
src/Components/Covers/: AbstractCoverFetcher.cpp  AbstractCoverFetcher.h  AbstractCoverLookup.cpp  AbstractCoverLookup.h  CMakeLists.txt  CoverChangeNotifier.cpp  CoverChangeNotifier.h  CoverFetchManager.cpp  CoverFetchManager.h  CoverFetchThread.cpp  CoverFetchThread.h  CoverFetcher.cpp  CoverFetcher.h  CoverFetcherInterface.cpp  CoverFetcherInterface.h  CoverHelper.cpp  CoverHelper.h  CoverLocation.cpp  CoverLocation.h  CoverLookup.cpp  CoverLookup.h  CoverLookupAll.cpp  CoverLookupAll.h  CoverLookupAlternative.cpp  CoverLookupAlternative.h  CoverUtils.cpp  CoverUtils.h  DiscogsCoverFetcher.cpp  DiscogsCoverFetcher.h  GoogleCoverFetcher.cpp  GoogleCoverFetcher.h  LFMCoverFetcher.cpp  LFMCoverFetcher.h  LocalCoverSearcher.cpp  LocalCoverSearcher.h  StandardCoverFetcher.cpp  StandardCoverFetcher.h
src/Components/DBus/: CMakeLists.txt  DBusHandler.cpp  DBusHandler.h  DBusMPRIS.cpp  DBusMPRIS.h  DBusMTPFile.h  DBusMediaKeysInterface.cpp  DBusMediaKeysInterface.h  DBusMediaKeysInterfaceGnome.cpp  DBusMediaKeysInterfaceGnome.h  DBusMediaKeysInterfaceMate.cpp  DBusMediaKeysInterfaceMate.h  DBusNotifications.cpp  DBusNotifications.h
src/Components/Directories/: CMakeLists.txt  DirectoryReader.cpp  DirectoryReader.h  FileOperations.cpp  FileOperations.h
src/Components/DirectoryReader/: CMakeLists.txt  DirectoryReader.cpp  DirectoryReader.h
src/Components/Engine/: AbstractEngine.cpp  AbstractEngine.h  AbstractPipeline.cpp  AbstractPipeline.h  CMakeLists.txt  EngineHandler.cpp  EngineHandler.h  EngineHelper.h  gstfwd.h
src/Components/LyricLookup/: CMakeLists.txt  LyricLookup.cpp  LyricLookup.h  LyricServer.cpp  LyricServer.h
src/Components/Lyrics/: CMakeLists.txt  LyricLookup.cpp  LyricLookup.h  LyricServer.cpp  LyricServer.h  Lyrics.cpp  Lyrics.h
src/Components/MTP/: CMakeLists.txt  MTP.cpp  MTP.h  MTP_CopyFiles.cpp  MTP_CopyFiles.h  MTP_Device.cpp  MTP_Device.h  MTP_File.cpp  MTP_File.h  MTP_Folder.cpp  MTP_Folder.h  MTP_RawDevice.cpp  MTP_RawDevice.h  MTP_Storage.cpp  MTP_Storage.h  MTP_Track.cpp  MTP_Track.h  MTP_Typedefs.h
src/Components/MetaDataInfo/: ArtistInfo.cpp  ArtistInfo.h  CMakeLists.txt  MetaDataInfo.cpp  MetaDataInfo.h
src/Components/PlayManager/: CMakeLists.txt  PlayManager.cpp  PlayManager.h  PlayState.h
src/Components/Playlist/: AbstractPlaylist.cpp  AbstractPlaylist.h  CMakeLists.txt  Playlist.cpp  Playlist.h  PlaylistDBConnector.cpp  PlaylistDBConnector.h  PlaylistDBInterface.cpp  PlaylistDBInterface.h  PlaylistDBWrapper.cpp  PlaylistDBWrapper.h  PlaylistHandler.cpp  PlaylistHandler.h  PlaylistLoader.cpp  PlaylistLoader.h  StdPlaylist.h  (+6 more)
src/Database/: AbstractDatabase.cpp  AbstractDatabase.h  AllDatabase.cpp  CMakeLists.txt  DatabaseAlbums.cpp  DatabaseAlbums.h  DatabaseArtists.cpp  DatabaseArtists.h  DatabaseBookmarks.cpp  DatabaseBookmarks.h  DatabaseConnector.cpp  DatabaseConnector.h  DatabaseHandler.cpp  DatabaseHandler.h  DatabaseLibrary.cpp  DatabaseLibrary.h  DatabaseModule.cpp  DatabaseModule.h  DatabasePlaylist.cpp  DatabasePlaylist.h  DatabasePodcasts.cpp  DatabasePodcasts.h  DatabaseSearchMode.cpp  DatabaseSearchMode.h  DatabaseSettings.cpp  DatabaseSettings.h  DatabaseStreams.cpp  DatabaseStreams.h  DatabaseTracks.cpp  DatabaseTracks.h  DatabaseVisStyles.cpp  DatabaseVisStyles.h  LibraryDatabase.cpp  LibraryDatabase.h  LocalLibraryDatabase.cpp  LocalLibraryDatabase.h  SayonaraQuery.cpp  SayonaraQuery.h
src/GUI/: CMakeLists.txt
src/Helper/: CMakeLists.txt  EqualizerPresets.cpp  EqualizerPresets.h  FileHelper.cpp  FileHelper.h  Filter.h  Helper.cpp  Helper.h  Language.cpp  Language.h  LibrarySearchMode.cpp  Pimpl.h  PlaylistMode.h  SayonaraClass.cpp  SayonaraClass.h  SayonaraMessageBox.h  Set.cpp  Set.h  SetFwd.h  Singleton.h  Tree.cpp  Tree.h  UrlHelper.cpp  UrlHelper.h  Vector.cpp  Vector.h  globals.h  singleton.h  typedefs.h
src/Interfaces/: CMakeLists.txt
src/Languages/: CMakeLists.txt  sayonara_lang.ts.template  sayonara_lang_br.ts  sayonara_lang_cs.ts  sayonara_lang_de.ts  sayonara_lang_en.ts  sayonara_lang_es.ts  sayonara_lang_fr.ts  sayonara_lang_hu.ts  sayonara_lang_it.ts  sayonara_lang_mx.ts  sayonara_lang_nl.ts  sayonara_lang_pl.ts  sayonara_lang_ro.ts  sayonara_lang_ru.ts  sayonara_lang_tr.ts  sayonara_lang_ua.ts  sayonara_lang_zh_cn.ts
src/Utils/: CMakeLists.txt  EqualizerPresets.cpp  FileUtils.cpp  FileUtils.h  Language.cpp  Language.h  Pimpl.h  RandomGenerator.cpp  RandomGenerator.h  Set.cpp  Set.h  SetFwd.h  Singleton.h  Tree.cpp  Tree.h  Utils.cpp  Utils.h  globals.h  typedefs.h
test/: CMakeLists.txt  new_test.cmake  test1.cpp  test1.h
test/Helper/: FileHelperTest.cpp  LanguageKeyTest.cpp  MetaDataListTest.cpp  MetaDataTest.cpp
test/StreamRecorder/: StreamRecorderTest.cpp  StreamRecorderTest.h  StreamRecorderUtilsTest.cpp  StreamRecorderUtilsTest.h
test/Tagging/: AbstractTaggingTest.cpp  AbstractTaggingTest.h  AlbumArtistTest.cpp  DiscnumberTest.cpp  LyricsTest.cpp
test/resources/: Test.qrc
(+1064 files in other folders)
