CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(say_comp)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR},
	${CMAKE_CURRENT_BINARY_DIR}
)

ADD_SUBDIRECTORY(Broadcasting)
ADD_SUBDIRECTORY(StreamPlugins)
ADD_SUBDIRECTORY(TagEdit)
ADD_SUBDIRECTORY(Playlist)
ADD_SUBDIRECTORY(Library)
ADD_SUBDIRECTORY(CoverLookup)
ADD_SUBDIRECTORY(LyricLookup)
ADD_SUBDIRECTORY(RemoteControl)

IF( NOT WIN32 OR NOT DEFINED WIN32 )
    ADD_SUBDIRECTORY(DBus)
ENDIF()

ADD_SUBDIRECTORY(Engine)
ADD_SUBDIRECTORY(PlayManager)
ADD_SUBDIRECTORY(Bookmarks)
ADD_SUBDIRECTORY(PlaylistChooser)

IF(${MTP_FOUND})
    ADD_SUBDIRECTORY(MTP)
ENDIF()
