PROJECT(say_comp)

ADD_SUBDIRECTORY(Bookmarks)
ADD_SUBDIRECTORY(Broadcasting)
ADD_SUBDIRECTORY(Covers)

IF( NOT WIN32 OR NOT DEFINED WIN32 )
	ADD_SUBDIRECTORY(DBus)
ENDIF()

ADD_SUBDIRECTORY(DirectoryReader)
ADD_SUBDIRECTORY(Engine)
ADD_SUBDIRECTORY(Library)
ADD_SUBDIRECTORY(Lyrics)
ADD_SUBDIRECTORY(Playlist)
ADD_SUBDIRECTORY(PlaylistChooser)
ADD_SUBDIRECTORY(PlayManager)
ADD_SUBDIRECTORY(Preferences)
ADD_SUBDIRECTORY(RemoteControl)
ADD_SUBDIRECTORY(StreamPlugins)
ADD_SUBDIRECTORY(Tagging)


