CMAKE_MINIMUM_REQUIRED(VERSION 2.7)
PROJECT(say_gui)

ADD_SUBDIRECTORY(AlternativeCovers)
ADD_SUBDIRECTORY(DirectoryWidget)
ADD_SUBDIRECTORY(FontConfig)
ADD_SUBDIRECTORY(Helper)
ADD_SUBDIRECTORY(InfoDialog)
ADD_SUBDIRECTORY(LanguageChooser)
ADD_SUBDIRECTORY(LastFM)
ADD_SUBDIRECTORY(Library)
ADD_SUBDIRECTORY(LibraryPreferences)

IF(${MTP_FOUND})
    ADD_SUBDIRECTORY(MTP)
ENDIF()

ADD_SUBDIRECTORY(Notifications)
ADD_SUBDIRECTORY(Player)
ADD_SUBDIRECTORY(PlayerPlugins)
ADD_SUBDIRECTORY(Playlist)
ADD_SUBDIRECTORY(PreferenceDialog)
ADD_SUBDIRECTORY(Resources)
ADD_SUBDIRECTORY(ShutdownDialog)
ADD_SUBDIRECTORY(RemoteControl)
ADD_SUBDIRECTORY(Shortcuts)
ADD_SUBDIRECTORY(StartupDialog)
ADD_SUBDIRECTORY(StreamRecorder)
ADD_SUBDIRECTORY(TagEdit)

