PROJECT(say_gui)

ADD_SUBDIRECTORY(Covers)
ADD_SUBDIRECTORY(DirectoryWidget)
ADD_SUBDIRECTORY(Helper)
ADD_SUBDIRECTORY(InfoDialog)
ADD_SUBDIRECTORY(Library)
ADD_SUBDIRECTORY(Player)
ADD_SUBDIRECTORY(Playlist)
ADD_SUBDIRECTORY(Preferences)
ADD_SUBDIRECTORY(Resources)
ADD_SUBDIRECTORY(ShutdownDialog)
ADD_SUBDIRECTORY(TagEdit)
ADD_SUBDIRECTORY(Plugins)

