PROJECT(say_lang)

FILE(GLOB TS_FILES . *.ts)

QT5_ADD_TRANSLATION(QM_FILES ${TS_FILES})

IF(WIN32)
	SET(TRANSLATION_TARGET_PATH
		share/translations
	)
ELSE()
	SET(TRANSLATION_TARGET_PATH
		share/sayonara/translations
	)
ENDIF()


ADD_CUSTOM_TARGET(TRANSLATIONS_TARGET DEPENDS ${QM_FILES})
INSTALL(DIRECTORY ./icons DESTINATION ${TRANSLATION_TARGET_PATH} FILES_MATCHING
    PATTERN "*.png"
    PATTERN "*.svn" EXCLUDE
)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${QM_FILES})


INSTALL(FILES ${QM_FILES} DESTINATION ${TRANSLATION_TARGET_PATH})
