PROJECT(say_utils)

INCLUDE(CheckIncludeFileCXX)
CHECK_INCLUDE_FILE_CXX("cxxabi.h" HAVE_CXX_ABI)
IF(${HAVE_CXX_ABI})
	ADD_DEFINITIONS("-DHAVE_CXX_ABI")
	MESSAGE("Compile with demangle")
ELSE()
	MESSAGE("Demangle not found")
ENDIF()

PKG_CHECK_MODULES(ZLIB REQUIRED zlib)
INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})

FILE(GLOB_RECURSE SOURCES . *.cpp)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	Qt5::Core
	Qt5::Network
	Qt5::Xml
	Qt5::DBus
	Qt5::Gui
	tag
	${ZLIB_LIBRARIES}
)

IF( WITH_COTIRE )
cotire(${PROJECT_NAME})
ENDIF()
