PROJECT(say_comp_engine)

FILE(GLOB_RECURSE SOURCES . *.cpp)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	${GSTREAMER_LIBRARIES}
	${GSTREAMER_BASE_LIBRARIES}
	${GSTREAMER_BASE_APP_LIBRARIES}

	say_comp_playmanager
	say_utils
)

IF( WITH_COTIRE )
	cotire(${PROJECT_NAME})
ENDIF()
