PROJECT(say_comp_tagging)

FILE(GLOB_RECURSE SOURCES . *.cpp)

INCLUDE_DIRECTORIES(${TAGLIB_INCLUDE_DIRS})
LINK_DIRECTORIES(${TAGLIB_LIBRARY_DIRS})

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	say_db
	say_utils
)

IF( WITH_COTIRE )
	cotire(${PROJECT_NAME})
ENDIF()


