PROJECT(say_gui_player_plugins)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_SUBDIRECTORY(AudioConverter)
ADD_SUBDIRECTORY(Bookmarks)
ADD_SUBDIRECTORY(Broadcasting)
ADD_SUBDIRECTORY(Engine)
ADD_SUBDIRECTORY(Equalizer)
ADD_SUBDIRECTORY(PlaylistChooser)
ADD_SUBDIRECTORY(Speed)
ADD_SUBDIRECTORY(Crossfader)
ADD_SUBDIRECTORY(Stream)

SET(SOURCES
    GUI_PlayerPlugin.cpp
    PluginCloseButton.cpp
)

QT5_WRAP_UI(FORMS_UIC
    GUI_PlayerPlugin.ui
)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES} ${FORMS_UIC})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    say_interfaces_player_plugin
)
